--- a/pro/src/styles/variables/_forms.scss
+++ b/pro/src/styles/variables/_forms.scss
@@ -10,3 +10,5 @@ $input-space-before-error: rem.torem(8px);
 $label-space-before-input: rem.torem(8px);
 $label-small-space-before-input: rem.torem(16px);
 $sign-form-space-left: rem.torem(665px);
+$input-label-min-height: rem.torem(16px);
+$input-description-min-height: rem.torem(16px);
